<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- general_bottom -->
    <string name="general_bootom_imageButton_contentDescription">imageButton</string>
    <string name="general_bottom_index_textView">首页</string>
    <string name="general_bottom_mall_textView">商城</string>
    <string name="general_bottom_cart_textView">购物车</string>
    <string name="general_bottom_center_textView">我的</string>

    <!-- mall_products_listView -->
    <string name="mall_products_listview_imageView_contentDescription">imageView</string>
    <string name="activity_mall_serchbar_previous_contentDescription">imageView</string>
    <string name="activity_mall_serchbar_editText_hint">搜索商品</string>
    <string name="activity_mall_serchbar_menu_contentDescription">imageView</string>
    
    <!--  -->
    <string name="app_name">Whbapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="gotoPayButton_text">进入微信支付</string>
    <string name="checkWxPaySupportbutton">检查微信版本是否支持支付</string>
    <string name="callPayButton">调用微信支付</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_wxpay_entry">WXPayEntryActivity</string>
    <string name="app_tip">提示</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="orderid_hint">请输入订单号</string>
    <string name="test_button">测试</string>
    <string name="activity_pay_textViewOrderid">订单号：</string>
    <string name="activity_main_entryMallButton">商城</string>
    <string name="activity_main_entryOrderImageView">productimg</string>
    <string name="title_activity_orderdetails">OrderdetailsActivity</string>
    <string name="title_activity_mall">MallActivity</string>
    <string name="mall_goodsnameTextView">商品名称</string>
    <string name="mall_packagepriceTextView">商品价格</string>

</resources>