<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/mall_products_listview_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/mall_products_listview_imageView_contentDescription"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mall_products_listview_goodsname_textView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/mall_goodsnameTextView"
            android:textColor="#252525"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/mall_products_listview_packageprice_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mall_packagepriceTextView"
            android:textColor="#dc393d"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>